# oligopool

./: .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  agent-skill.md  docker-notes.md  dockerfile  docs.md  oligopool-agent-skill.md  pyproject.toml  setup.py
deprecated/: background.docstring.txt  primer.docstring.txt
docs/: README.md  agent-skills.md  api.md  docker-notes.md  docs.md
examples/: OligopoolCalculatorInAction.ipynb  README.md
examples/analysis-pipeline/: README.md  analysis_pipeline.py  read_simulator.ipynb  ribozyme_architecture.csv  run_analysis_pipeline.py
examples/cli-pipeline/: README.md  mpra_pipeline.yaml  parallel_pipeline.yaml  run_example.sh  variants.csv
examples/cli-yaml-pipeline/: README.md  analysis_multi.yaml  analysis_single.yaml  mpra_design_parallel.yaml  mpra_design_serial.yaml  run_example.sh
examples/design-assembly-parser/: README.md  design_assembly_parser.py  design_parser.py  run_design_assembly_parser.py
examples/design-parser/: design_parser.py  designparser.py  run_design_parser.py  test_design_parser.py
examples/library-compressor/: README.md  mutant_generator.py  run_degenerate_demo.py
oligopool/: TODO-Analysis.md  TODO-Design.md  __init__.py  acount.py  background.py  barcode.py  bridge.py  cli.py  compress.py  corebarcode.py  corecount.py  coreindex.py  coremotif.py  corepack.py  coreprimer.py  coresplit.py  descriptions.py  expand.py  final.py  index.py  inspect.py  join.py  lenstat.py  merge.py  motif.py  pack.py  pad.py  padding.py  primer.py  retired.py  revcomp.py  scry.py  spacer.py  split.py  utils.py  valparse.py  vectordb.py  verify.py  xcount.py
oligopool/base/: acount.py  background.py  barcode.py  config_loader.py  core_background.py  core_barcode.py  core_count.py  core_degenerate.py  core_index.py  core_inspect.py  core_lenstat.py  core_motif.py  core_pack.py  core_primer.py  core_split.py  core_verify.py  corebarcode.py  corecount.py  coreindex.py  coremotif.py  corepack.py  coreprimer.py  coresplit.py  final.py  index.py  lenstat.py  motif.py  pack.py  pad.py  primer.py  scry.py  spacer.py  split.py  utils.py  validation_parsing.py  valparse.py  vectordb.py  xcount.py
oligopool/cemetary/: bridge.py  corepack-pipes.py  pack-pipes.py  retired.py
oligopool/howardcode/: ref.py  testOverlapDesign.py
opcalc/: barcode.py  barcodes.py  utils.py
opcalc/howardcode/: PyVRNA.py
optk/: split.py
parser/: designparser.py
