[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oligopool"
description = "Oligopool Calculator - Automated design and analysis of oligo pool libraries"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10,<4"
license = { file = "LICENSE" }
authors = [
  { name = "Ayaan Hossain", email = "auh57@psu.edu" },
  { name = "Howard Salis", email = "salis@psu.edu" },
]
keywords = [
  "oligopool",
  "oligopools",
  "oligopool-calculator",
  "oligonucleotide",
  "oligonucleotides",
  "dna",
  "synthetic",
  "synthetic-biology",
  "computational",
  "biology",
  "bioinformatics",
  "genomics",
  "high-throughput",
  "nucleotide",
  "oligo",
  "pool",
  "calculator",
  "design",
  "analysis",
  "library",
  "libraries",
  "foundry",
  "barcode",
  "barcoded",
  "primer",
  "spacer",
  "motif",
  "reverse-complement",
  "split",
  "pad",
  "assembly",
  "gibson",
  "gibson-assembly",
  "golden-gate",
  "golden-gate-assembly",
  "type-iis",
  "combinatorial",
  "index",
  "pack",
  "fastq",
  "ngs",
  "sequencing",
  "mpra",
  "massively-parallel",
  "scry",
  "classifier",
  "count",
  "acount",
  "xcount",
  "cli",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "biopython>=1.84",
  "primer3-py>=2.0.3",
  "msgpack>=1.1.0",
  "pyfastx>=2.1.0",
  "edlib>=1.3.9.post1",
  "parasail>=1.3.4",
  "nrpcalc>=1.7.0",
  "sharedb>=1.1.2",
  "numba>=0.60.0",
  "seaborn>=0.13.2",
  "multiprocess>=0.70.17",
  "argcomplete>=3.2.3",
  "pyyaml>=6.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/ayaanhossain/oligopool"
Documentation = "https://github.com/ayaanhossain/oligopool/blob/master/docs/docs.md"
BugReports = "https://github.com/ayaanhossain/oligopool/issues"
Source = "https://github.com/ayaanhossain/oligopool/tree/master/oligopool"

[project.scripts]
oligopool = "oligopool.cli:main"
op = "oligopool.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["oligopool*"]

[tool.setuptools.dynamic]
version = { attr = "oligopool.__version__" }
